Update base.css (fix weird code font size on iOS)

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,6 +16,15 @@ body {
   box-sizing: border-box;
 }
 
+
+/* Fixes iOS font sizing anomaly */
+code {
+    text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
 body {
   font-family: var(--content-font);
   min-height: 100vh;
